// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LadderPage renders the empty state 1`] = `
<div
  className="m-ladder-page"
>
  <div
    className="m-picker-container visible"
  >
    <div
      className="m-picker-container__tab"
    >
      <button
        className="m-picker-container__tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-route-picker"
    >
      <ul
        className="m-route-picker__selected-routes"
      />
      <div
        className="m-route-filter"
      >
        <select
          className="m-route-filter__type"
          onChange={[Function]}
          value="id"
        >
          <option
            value="id"
          >
            Route ID
          </option>
        </select>
        <div
          className="m-route-filter__text"
        >
          <input
            className="m-route-filter__input"
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value=""
          />
          <button
            className="m-route-filter__clear"
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
      </div>
      loading...
    </div>
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;

exports[`LadderPage renders with routes 1`] = `
<div
  className="m-ladder-page"
>
  <div
    className="m-picker-container visible"
  >
    <div
      className="m-picker-container__tab"
    >
      <button
        className="m-picker-container__tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-route-picker"
    >
      <ul
        className="m-route-picker__selected-routes"
      >
        <li>
          <button
            className="m-route-picker__selected-routes-button"
            onClick={[Function]}
          >
            1
          </button>
        </li>
      </ul>
      <div
        className="m-route-filter"
      >
        <select
          className="m-route-filter__type"
          onChange={[Function]}
          value="id"
        >
          <option
            value="id"
          >
            Route ID
          </option>
        </select>
        <div
          className="m-route-filter__text"
        >
          <input
            className="m-route-filter__input"
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value=""
          />
          <button
            className="m-route-filter__clear"
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
      </div>
      <ul
        className="m-route-picker__route-list"
      >
        <li>
          <button
            className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
            onClick={[Function]}
          >
            1
          </button>
        </li>
        <li>
          <button
            className="m-route-picker__route-list-button "
            onClick={[Function]}
          >
            28
          </button>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="m-route-ladders"
  >
    <div
      className="m-route-ladder__header"
    >
      <button
        className="m-close-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
      <div
        className="m-route-ladder__route-name"
      >
        1
      </div>
    </div>
    <div
      className="m-route-ladder__controls"
    >
      <button
        className="m-route-ladder__reverse"
        onClick={[Function]}
      >
        <span
          className="m-route-ladder__reverse-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Reverse
      </button>
    </div>
    loading...
  </div>
</div>
`;

exports[`LadderPage renders with selectedRoutes in different order than routes data 1`] = `
<div
  className="m-ladder-page"
>
  <div
    className="m-picker-container visible"
  >
    <div
      className="m-picker-container__tab"
    >
      <button
        className="m-picker-container__tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-route-picker"
    >
      <ul
        className="m-route-picker__selected-routes"
      >
        <li>
          <button
            className="m-route-picker__selected-routes-button"
            onClick={[Function]}
          >
            28
          </button>
        </li>
        <li>
          <button
            className="m-route-picker__selected-routes-button"
            onClick={[Function]}
          >
            1
          </button>
        </li>
      </ul>
      <div
        className="m-route-filter"
      >
        <select
          className="m-route-filter__type"
          onChange={[Function]}
          value="id"
        >
          <option
            value="id"
          >
            Route ID
          </option>
        </select>
        <div
          className="m-route-filter__text"
        >
          <input
            className="m-route-filter__input"
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value=""
          />
          <button
            className="m-route-filter__clear"
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
      </div>
      <ul
        className="m-route-picker__route-list"
      >
        <li>
          <button
            className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
            onClick={[Function]}
          >
            1
          </button>
        </li>
        <li>
          <button
            className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
            onClick={[Function]}
          >
            28
          </button>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="m-route-ladders"
  >
    <div
      className="m-route-ladder__header"
    >
      <button
        className="m-close-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
      <div
        className="m-route-ladder__route-name"
      >
        28
      </div>
    </div>
    <div
      className="m-route-ladder__controls"
    >
      <button
        className="m-route-ladder__reverse"
        onClick={[Function]}
      >
        <span
          className="m-route-ladder__reverse-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Reverse
      </button>
    </div>
    loading...
    <div
      className="m-route-ladder__header"
    >
      <button
        className="m-close-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
      <div
        className="m-route-ladder__route-name"
      >
        1
      </div>
    </div>
    <div
      className="m-route-ladder__controls"
    >
      <button
        className="m-route-ladder__reverse"
        onClick={[Function]}
      >
        <span
          className="m-route-ladder__reverse-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Reverse
      </button>
    </div>
    loading...
  </div>
</div>
`;

exports[`LadderPage renders with timepoints 1`] = `
<div
  className="m-ladder-page"
>
  <div
    className="m-picker-container visible"
  >
    <div
      className="m-picker-container__tab"
    >
      <button
        className="m-picker-container__tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-route-picker"
    >
      <ul
        className="m-route-picker__selected-routes"
      />
      <div
        className="m-route-filter"
      >
        <select
          className="m-route-filter__type"
          onChange={[Function]}
          value="id"
        >
          <option
            value="id"
          >
            Route ID
          </option>
        </select>
        <div
          className="m-route-filter__text"
        >
          <input
            className="m-route-filter__input"
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value=""
          />
          <button
            className="m-route-filter__clear"
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
      </div>
      <ul
        className="m-route-picker__route-list"
      >
        <li>
          <button
            className="m-route-picker__route-list-button "
            onClick={[Function]}
          >
            1
          </button>
        </li>
        <li>
          <button
            className="m-route-picker__route-list-button "
            onClick={[Function]}
          >
            28
          </button>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;
